WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136120
WebAudio FFT analysis uses incorrect scaling
https://bugs.webkit.org/show_bug.cgi?id=136120
Summary
WebAudio FFT analysis uses incorrect scaling
Dean Jackson
Reported
2014-08-20 15:18:38 PDT
WebAudio FFT analysis uses incorrect scaling
Attachments
Patch
(7.70 KB, patch)
2014-08-20 15:26 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-08-20 15:26:53 PDT
Created
attachment 236900
[details]
Patch
Tim Horton
Comment 2
2014-08-20 15:31:40 PDT
Comment on
attachment 236900
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236900&action=review
> Source/WebCore/ChangeLog:18 > + When this test is run using an older version of Chrome, the peak varies
Chrome!
> LayoutTests/webaudio/realtimeanalyser-fft-scaling.html:33 > + function checkResult() {
function body is not indented?
Alexey Proskuryakov
Comment 3
2014-08-20 17:54:04 PDT
***
Bug 135986
has been marked as a duplicate of this bug. ***
Dean Jackson
Comment 4
2014-08-20 17:54:37 PDT
Committed
r172816
: <
http://trac.webkit.org/changeset/172816
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug